--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "vee-validate": "^4.14.7",
     "vue": "^3.4.21",
     "vue-router": "^4.4.3",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
